# SHS-Digital-Wellness-Challenge-Passport

./: .dockerignore  .gitignore  CI_FIXES.md  CLAUDE.md  COMPLETE_FIX.bat  Dockerfile  FINAL_STATUS.md  FIX_BLACK_SCREEN.md  FIX_US15_INSTRUCTIONS.md  IMPLEMENTATION_US15.md  Makefile  PR_UPDATE.md  README.md  README_FIX.md  README_US15.md  RUNME.bat  START_HERE.bat  US-16-IMPLEMENTATION-SUMMARY.md  US15_CHANGES.md  US15_FRONTEND_SUMMARY.md  US15_STATUS.md  check_frontend.bat  check_git_status.bat  check_syntax.bat  diagnose_backend.bat  docker-compose.yml  fix_all_ci.sh  fix_backend_bug.bat  fix_ci.bat  fix_ci_simple.bat  fix_database.py  fix_merge.ps1  fix_tests.bat  fix_us15.cmd  migrate_database.py  push_to_pr.bat  pyrightconfig.json  quick_fix.bat  resolve-and-push.cmd  resolve-and-push.ps1  (+14 more)
backend/: .gitignore  README.md  enroll_test_student.py  pyproject.toml  requirements.txt  seed_dev.py  seed_test_data.py  test_auth.py  test_imports.py  test_passport_api.py
backend/app/: config.py  db.py  main.py
backend/app/auth/: __init__.py  deps.py  eligibility.py  mock_idp.py  provider.py  rbac.py  registry.py  saml_provider.py  session.py
backend/app/functions/: __init__.py  assessments.py  auth.py  bootstrap.py  challenges.py  enrollment.py  guide.py  health.py  passport.py  reports.py  themes.py
backend/app/models/: __init__.py  challenge.py  conversation.py  engagement.py  student.py  theme.py
backend/app/repositories/: base.py  dto.py  dynamo_repo.py  sqlalchemy_repo.py
backend/app/routers/: __init__.py  admin.py  assessments.py  auth.py  bootstrap.py  challenges.py  checkins.py  conversations.py  enrollment.py  guide.py  passport.py  reports.py  themes.py
backend/app/schemas/: __init__.py  assessment.py  bootstrap.py  challenge.py  conversation.py  engagement.py  enrollment.py  guide.py  passport.py  report.py  session.py  theme.py
backend/app/services/: __init__.py  ai_guide.py  ai_tips.py  assessments.py  campus.py  challenges.py  checkins.py  engagement.py  enrollment.py  guide.py  guide_corpus.py  guide_safety.py  guide_text.py  passport.py  qr.py  reflection_scoring.py  reports.py  seed.py  students.py  themes.py
backend/layer/: requirements.txt
backend/tests/: conftest.py  ddb_support.py  test_assessment_items.py  test_attendance_report.py  test_attendance_report_bdd.py  test_auth.py  test_bootstrap.py  test_challenges.py  test_checkin_summary.py  test_checkins.py  test_duplicate_challenge_bdd.py  test_dynamo_repo.py  test_eligibility.py  test_engagement_report.py  test_engagement_report_bdd.py  test_enrollment.py  test_guide_guardrails.py  test_guide_guardrails_bdd.py  test_guide_safety.py  test_learning_outcome_report.py  test_learning_outcome_report_bdd.py  test_manual_override.py  test_manual_override_bdd.py  test_mcq_scoring.py  test_mcq_scoring_bdd.py  test_participation_report.py  test_participation_report_bdd.py  test_passport.py  test_prize_eligibility.py  test_prize_export.py  test_prize_export_bdd.py  test_qr_checkin.py  test_reflection_override.py  test_reflection_scorer.py  test_reflection_scoring.py  test_reflection_scoring_bdd.py  test_repository_contract.py  test_seed_dynamo.py  test_spa_mount.py  test_themes.py  (+1 more)
backend/tests/features/: attendance_report.feature  duplicate_challenge.feature  engagement_report.feature  guide_guardrails.feature  learning_outcome_report.feature  (+5 more)
(+136 files in other folders)
