[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shs-wellness-passport-backend"
version = "0.1.0"
description = "SHS Digital Wellness Passport — API (F1: Campus SSO sign-in)"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.2",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Real SAML integration. Pulls native xmlsec/libxmlsec1 — installed ONLY when the
# real campus IdP is wired (AUTH_PROVIDER=saml). The mock path never needs this.
saml = ["python3-saml>=1.16"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
